# fetal-smpl

./: .gitignore  README.md  setup.cfg
data_split/open_source/: visualization.json
fetal_smpl/: alignment.py  evaluation.py  lbs_unpose.py  learn_shape.py  smpl.py  utils.py  vertex_keypoint_regressor.py
models/: smil_pose_prior_converted_mean.npy  smil_pose_prior_converted_prec.npy
results/open_source/data/visualization/MAP-C507/: kpt_pixel_seq.npy  kpt_seq.npy
scripts/: fetal_smpl_align.py
scripts/visualization/: align_subj_spec_shape_optim_his.py  align_subj_spec_shape_seq.py  init_align_smil_to_posed_optim_his.py  init_align_smil_to_posed_seq.py  init_smil_beta_from_unposed_history.py
