[metadata]
name = fetal-smpl
version = 0.0
description = A short description of the project.
author = Yingcheng Liu
author_email = yingchengliu1996@gmail.com
license = MIT

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.9 
packages = fetal-smpl
setup_requires =
    setuptools
    # setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
    # setuptools >=46.4.0     # let's you use attr: to extract version from a module

 # TODO: pip install . resulted in installing other dependencies <13-01-22, YL> #
install_requires =
    pre-commit
    isort
    ruff

[isort]
line_length=88
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
ensure_newline_before_comments=True

known_myself = 
    fetal_smpl

extra_standard_library =
    setuptools

known_third_party =
    numpy
    joblib
    scipy
    tqdm
    pandas
    yaml
    fvcore
    matplotlib
    cv2
    torch
    torchvision
    PIL
    pycocotools
    yacs
    termcolor
    cityscapesscripts
    tabulate
    lvis
    psutil
    pkg_resources
    caffe2
    onnx
    streamlit
    dateparser
    pingouin
    statsmodels
    sklearn
    altair
    boto3
    seaborn
    einops
    skimage 

sections =
    FUTURE
    STDLIB
    THIRDPARTY
    FIRSTPARTY
    MYSELF
    LOCALFOLDER

default_section = FIRSTPARTY

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "site-packages", "venv"]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
